# UserManagerClient.rust

./: LICENSE  README.md
rest/: Cargo.toml
rest/src/: lib.rs
umc/: Cargo.toml
umc/src/: main.rs
