[package]
name = "rest"
version = "0.1.0"
edition = "2021"
authors = [ "Lars Geyer-Blaumeiser <lars@lgblaumeiser.de>" ]
license-file = "../LICENSE"
license = "MIT"
homepage = "https://github.com/lgblaumeiser/UserManagerClient.rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking"] }
