[package]
name = "umc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
serde_json = "1.0.85"
simple-error = "0.2.3"
